# mypet

./: .gitignore  CLAUDE.md  README.md
backend/: analyzer.py  database.py  main.py  models.py  pyproject.toml  scheduler.py  scraper.py
docs/: architecture.md  cat-states.md  prompt-design.md  user-feedback-optimization.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  constants.js  index.css
frontend/src/components/: Cat.css  Cat.jsx  ShareCard.css  ShareCard.jsx  StatusPanel.css  StatusPanel.jsx  TrendPanel.css  TrendPanel.jsx
frontend/src/hooks/: useTrendHistory.js  useTrendingData.js
frontend/src/utils/: domToImage.js  format.js
